--- a/src/AdminBundle/Resources/views/Serie/admin.serie.html.twig
+++ b/src/AdminBundle/Resources/views/Serie/admin.serie.html.twig
@@ -5,7 +5,7 @@
     </div>
     <table class="u-full-width">
         <tbody>
-        {% if listSerie|length == 0 %}
+        {% if listSerie|length == 0 %}aa
             <tr>
                 <td colspan="5">il n'y a pas de série</td>
             </tr>
