--- a/src/AdminBundle/Resources/views/Mail/mail.admin.confirmation.purchase.html.twig
+++ b/src/AdminBundle/Resources/views/Mail/mail.admin.confirmation.purchase.html.twig
@@ -8,23 +8,20 @@
         <td align="center" style="padding: 10px 0;"><a href="http://localhost/ihatesupreme/web/app_dev.php/" target="_blank" title="i hate supreme" style="color: white; background: black; text-decoration: none; padding: 2px;">i hate supreme.</a></td>
     </tr>
     <tr>
-        <td align="center" style="padding: 10px 0;">bonjour {{ purchase.lastname }} {{ purchase.firstname }}.</td>
-    </tr>
-    <tr>
-        <td align="center" style="padding: 10px 0;">merci pour votre commande.</td>
+        <td align="center" style="padding: 10px 0;">chouette une nouvelle commande !</td>
     </tr>
     <tr align="center">
         <td>
             <table width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" style="width:500px;">
                 <tr>
-                    <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;" colspan="3">votre panier</td>
+                    <td style="background-color:#E1E1E1;padding: 10px;" colspan="3"><b>{{ purchase.lastname }} {{ purchase.firstname }}</b></td>
                 </tr>
                 {% for item in buyList %}
-                <tr>
-                    <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;"><img src="http://localhost/ihatesupreme/web/uploads/img/{{ item.keyImg }}.jpeg" alt="paris1" title="paris1" width="100" style="display:block;"></td>
-                    <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">{{ item.title }}</td>
-                    <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">{{ item.price }}€</td>
-                </tr>
+                    <tr>
+                        <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;"><img src="http://localhost/ihatesupreme/web/uploads/img/{{ item.keyImg }}.jpeg" alt="paris1" title="paris1" width="100" style="display:block;"></td>
+                        <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">{{ item.title }}</td>
+                        <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">{{ item.price }}€</td>
+                    </tr>
                 {% endfor %}
                 <tr style="height:30px;">
                     <td colspan="3" align="right" style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">total : {{ amount }}€</td>
@@ -33,10 +30,10 @@
         </td>
     </tr>
     <tr>
-        <td align="center" style="padding: 10px 0;">elle sera traitée dans les plus brefs délais.</td>
+        <td align="center" style="padding: 10px 0;">allez voir sa commande <a href="http://localhost/ihatesupreme/web/app_dev.php/ihateadmin/purchase" target="_blank" title="i hate admin" style="color: white; background: black; text-decoration: none; padding: 2px;">i hate admin.</a></td>
     </tr>
     <tr>
-        <td align="center" style="padding: 10px 0;">i love u.</td>
+        <td align="center" style="padding: 10px 0;">i love him.</td>
     </tr>
 </table>
 </body>
