--- a/src/AdminBundle/Resources/views/Photo/admin.photo.html.twig
+++ b/src/AdminBundle/Resources/views/Photo/admin.photo.html.twig
@@ -12,7 +12,7 @@
             </tr>
         {% else %}
             {% for photo in listPhoto %}
-                <tr class="ui_row_filtre" ui-filtre-type="{{ photo.serie.name|replace(' ', '_') }}">
+                <tr class="ui_row_filtre" ui-filtre-type="{{ photo.serie.name|replace({' ': '_'}) }}">
                     <td style="border: 0; padding: 0;">
                         <table cellpadding="0" cellspacing="0" style="padding: 0; margin: 0; border: 0;" class="u-full-width">
                             <tr class="line-entete">
