--- a/src/AdminBundle/Resources/views/Purchase/admin.purchase.html.twig
+++ b/src/AdminBundle/Resources/views/Purchase/admin.purchase.html.twig
@@ -11,7 +11,7 @@
             </tr>
         {% else %}
             {% for purchase in listPurchase %}
-            <tr class="ui_row_filtre" ui-filtre-type="{{ purchase.status.state }}">
+            <tr class="ui_row_filtre" ui-filtre-type="{{ purchase.status.state|replace({' ': '_'}) }}">
                 <td style="border: 0; padding: 0;">
                     <table cellpadding="0" cellspacing="0" style="padding: 0; margin: 0; border: 0;" class="u-full-width">
                         <tr class="line-entete">
@@ -78,4 +78,5 @@
 {% endblock %}
 {% block linkscript %}
     <script src="{{ asset('js/admin/script.filtre.js') }}"></script>
+    <script src="{{ asset('js/script-panier.js') }}"></script>
 {% endblock %}
