Correctif Mail, Montant et ajout d'un test en dev

--- a/src/AdminBundle/Resources/views/Mail/mail.admin.confirmation.purchase.html.twig
+++ b/src/AdminBundle/Resources/views/Mail/mail.admin.confirmation.purchase.html.twig
@@ -6,7 +6,7 @@
 <body>
 <table width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" style="width:600px; font-family:Arial,sans-serif;margin: 0 auto;">
     <tr>
-        <td align="center" style="padding: 10px 0;"><a href="{{ path('admin_homepage') }}" target="_blank" title="i hate supreme" style="color: white; background: black; text-decoration: none; padding: 2px;">i hate supreme.</a></td>
+        <td align="center" style="padding: 10px 0;"><a href="http://ihatesupreme.com/ihateadmin" target="_blank" title="i hate supreme" style="color: white; background: black; text-decoration: none; padding: 2px;">i hate supreme.</a></td>
     </tr>
     <tr>
         <td align="center" style="padding: 10px 0;">chouette une nouvelle commande !</td>
@@ -19,7 +19,7 @@
                 </tr>
                 {% for item in buyList %}
                     <tr>
-                        <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;"><img src="{{ asset('uploads/img/'~ item.keyImg ~'.jpeg') }}" alt="paris1" title="paris1" width="100" style="display:block;"></td>
+                        <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;"><img src="http://ihatesupreme.com/uploads/img/{{ item.keyImg }}.jpeg" alt="paris1" title="paris1" width="100" style="display:block;"></td>
                         <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">{{ item.title }}</td>
                         <td style="border-bottom:1px solid #E1E1E1;padding: 10px 0;">{{ item.price }}€</td>
                     </tr>
@@ -31,7 +31,7 @@
         </td>
     </tr>
     <tr>
-        <td align="center" style="padding: 10px 0;">allez voir sa commande <a href="{{ path('admin_purchase') }}" target="_blank" title="i hate admin" style="color: white; background: black; text-decoration: none; padding: 2px;">i hate admin.</a></td>
+        <td align="center" style="padding: 10px 0;">allez voir sa commande <a href="http://ihatesupreme.com/ihateadmin/purchase" target="_blank" title="i hate admin" style="color: white; background: black; text-decoration: none; padding: 2px;">i hate admin.</a></td>
     </tr>
     <tr>
         <td align="center" style="padding: 10px 0;">i love him.</td>
