Optimisation du backoffice. Design tableau backoffice.

--- a/src/AdminBundle/Resources/views/Purchase/admin.purchase.html.twig
+++ b/src/AdminBundle/Resources/views/Purchase/admin.purchase.html.twig
@@ -3,77 +3,35 @@
     <div class="u-full-width">
         <select id="select_filtre"><option value="0">defaut</option></select>
     </div>
-    <table class="u-full-width">
-        <tbody>
+    <table cellpadding="0" cellspacing="0" style="padding: 0; margin: 0; border: 0;" class="u-full-width">
         {% if listPurchase|length == 0 %}
-            <tr>
-                <td class="a-c" colspan="6">Il n'y a pas encore de commande</td>
-            </tr>
+        <tr>
+            <td class="a-c" colspan="6">Il n'y a pas encore de commande</td>
+        </tr>
         {% else %}
+        <thead>
+            <tr class="line-entete">
+                <th>nom</th>
+                <th>prenom</th>
+                <th>montant</th>
+                <th>date commande</th>
+                <th>status</th>
+                <th>action</th>
+            </tr>
+        </thead>
+        <tbody>
             {% for purchase in listPurchase %}
             <tr class="ui_row_filtre" {% if purchase.status is not null %}ui-filtre-type="{{ purchase.status.state|replace({' ': '_'}) }}"{% endif %}>
-                <td style="border: 0; padding: 0;">
-                    <table cellpadding="0" cellspacing="0" style="padding: 0; margin: 0; border: 0;" class="u-full-width">
-                        <tr class="line-entete">
-                            <th>nom</th>
-                            <th>prenom</th>
-                            <th>email</th>
-                            <th>adresse</th>
-                            <th>code postal</th>
-                            <th>ville</th>
-                            <th>numéro</th>
-                            <th>date commande</th>
-                        </tr>
-                        <tr class="line-info">
-                            <td>{{ purchase.lastname }}</td>
-                            <td>{{ purchase.firstname }}</td>
-                            <td>{{ purchase.email }}</td>
-                            <td>{{ purchase.adress }}</td>
-                            <td>{{ purchase.zipCode }}</td>
-                            <td>{{ purchase.city }}</td>
-                            <td>{{ purchase.number }}</td>
-                            <td>{{ purchase.datePurcahse.format('d/m/Y H:i') }}</td>
-                        </tr>
-                        <tr class="line-info">
-                            <td><b>commande</b></td>
-                            <td colspan="7">
-                                <table class="u-full-width table-buy-list ui-parent-calcul">
-                                    <thead>
-                                    <tr>
-                                        <th>titre</th>
-                                        <th>code</th>
-                                        <th>price</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for item in purchase.buyList|json_decode %}
-                                        <tr>
-                                            <td>{{ item.title }}</td>
-                                            <td>{{ item.code }}</td>
-                                            <td data-price="{{ item.price }}">{{ item.price }} €</td>
-                                        </tr>
-                                    {% endfor %}
-                                    <tr class="line-total">
-                                        <td>&nbsp;</td>
-                                        <td>total</td>
-                                        <td class="ui-total"></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td><b>statut</b></td>
-                            <td>{% if purchase.status is not null %}{{ purchase.status.state }}{% else %}/{% endif %}</td>
-                            <td colspan="7"><a href="{{ path('admin_purchase_update', {'id': purchase.id}) }}">U</a></td>
-                        </tr>
-                    </table>
-                </td>
+                <td>{{ purchase.firstname }}</td>
+                <td>{{ purchase.lastname }}</td>
+                <td>{{ purchase.amount }} €</td>
+                <td>{{ purchase.datePurcahse.format('d/m/Y H:i') }}</td>
+                <td>{% if purchase.status is not null %}{{ purchase.status.state }}{% else %}/{% endif %}</td>
+                <td><a href="{{ path('admin_purchase_show', {'id': purchase.id}) }}">voir</a></td>
             </tr>
-
             {% endfor %}
-        {% endif %}
         </tbody>
+        {% endif %}
     </table>
 {% endblock %}
 {% block linkscript %}
