--- a/src/AdminBundle/Resources/views/Photo/admin.photo.html.twig
+++ b/src/AdminBundle/Resources/views/Photo/admin.photo.html.twig
@@ -8,38 +8,24 @@
         <tbody>
         {% if listPhoto|length == 0 %}
             <tr>
-                <td class="a-c" colspan="7">il n'y a pas de photo</td>
+                <td class="a-c">il n'y a pas de photo</td>
             </tr>
         {% else %}
+            <tr class="line-entete">
+                <th>&nbsp;</th>
+                <th>title</th>
+                <th>serie</th>
+                <th>price</th>
+                <th>action</th>
+            </tr>
             {% for photo in listPhoto %}
                 <tr class="ui_row_filtre" ui-filtre-type="{{ photo.serie.name|replace({' ': '_'}) }}">
-                    <td style="border: 0; padding: 0;">
-                        <table cellpadding="0" cellspacing="0" style="padding: 0; margin: 0; border: 0;" class="u-full-width">
-                            <tr class="line-entete">
-                                <th>&nbsp;</th>
-                                <th>title</th>
-                                <th>serie</th>
-                                <th>price</th>
-                                <th>name</th>
-                                <th>modify</th>
-                                <th>delete</th>
-                            </tr>
-                            <tr class="line-info">
-                                <td><img height="75" width="75" src="{{ asset(photo.webPath) }}" alt="{{ photo.name }}"
-                                         title="{{ photo.name }}"/></td>
-                                <td>{{ photo.title }}</td>
-                                <td>{{ photo.serie.name }}</td>
-                                <td>{{ photo.price }}</td>
-                                <td>{{ photo.name }}</td>
-                                <td><a href="{{ path('admin_photo_update', {'id': photo.id}) }}">U</a></td>
-                                <td><a href="{{ path('admin_photo_remove', {'id': photo.id}) }}">X</a></td>
-                            </tr>
-                            <tr>
-                                <td><b>description</b></td>
-                                <td colspan="6">{{ photo.description }}</td>
-                            </tr>
-                        </table>
-                    </td>
+                    <td><img width="150" src="{{ asset(photo.webPath) }}" alt="{{ photo.name }}"
+                             title="{{ photo.name }}"/></td>
+                    <td>{{ photo.title }}</td>
+                    <td>{{ photo.serie.name }}</td>
+                    <td>{{ photo.price }} €</td>
+                    <td><a href="{{ path('admin_photo_show', {'id' : photo.id}) }}">voir</a></td>
                 </tr>
             {% endfor %}
         {% endif %}
